# q7z

./: .gitignore  index.html  package-lock.json  package.json
src/: main.ts  progress.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
