[package]
name = "q7z"
version = "0.1.0"
description = "An app to queue 7z extraction"
authors = ["yak_ex"]
license = ""
repository = ""
default-run = "q7z"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = ["cli", "dialog"] }
tokio = { version = "1", features = ["process"] }
interprocess = { version = "2.2.1", features = ["tokio"] }
anyhow = "1.0.86"
windows = { version = "0.52.0", features = ["Win32_Globalization"] }
codepage = "0.1.2"
encoding_rs = { version = "0.8.34", features = ["fast-kanji-encode"] }
regex = "1.9.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
